Ana Cecília- INFO A

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>Capítulo 01 - o reino</h1>
     <p> era uma vez num reino tao tao distante,uma princesa chamada solar
         ela vivia no seu castelo isolada de todos ja que um dia se tornaria rainha,
-    entao um dia derrepente ela.. </p>
+    entao um dia de repente ela.. </p>
+    <p> decidiu sair para fora dos arredores do castelo e conhecer o mundo. Durante seu passeio conheceu diversos camponeses e camponesas e viu como havia maldade fora do castelo. Após o passeio sol viu que teria que mudar a vida daquele povo ou então continuar se isolando para sempre. </p>
   </body>
 </html>
